Fixed this thing that looked so ugly lol. Basically on phone screen the portfolio items were too big in height which made everything looked goofy

--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ input, textarea {
 }
 @media only screen and (max-width:1000px) {
 	.portfolio-item {
-		height: 52vh;
+		height: 47vh;
 		width: 25%;
 		margin: 1.6%;
 		margin-bottom: 5%;
